src/core/Claroline/PluginBundle/Tests/stub/plugin/Invalid/UnexpectedRoutingPrefix3/InvalidUnexpectedRoutingPrefix3.php
<?php

namespace Invalid\UnexpectedRoutingPrefix3;

use Claroline\PluginBundle\AbstractType\ClarolinePlugin;

class InvalidUnexpectedRoutingPrefix3 extends ClarolinePlugin
{
    public function getRoutingPrefix()
    {
        return "\rInvalid\trouting\n prefix";
    }
}